use official friend api, abandon nli psql
